# MPS_DAWN

./: .gitignore  CLAUDE.md  CMakeLists.txt  run_test.bat  test_output.txt
.claude/: instructions.md  settings.json
.claude/agents/: agent-manager.md  build-debug.md  database.md  dev-environment.md  gpu.md  module-management.md  render.md  simulate.md  system.md
.claude/docs/: core_database.md  core_gpu.md  core_platform.md  core_render.md  core_simulate.md  core_system.md  core_util.md  ext_admm_pd.md  ext_avbd.md  ext_chebyshev_pd.md  ext_dynamics.md  ext_jgs2.md  ext_mesh.md  ext_newton.md  ext_pd.md  ext_pd_term.md  ext_sample.md
.claude/guide/: ARCHITECTURE.md  DEVELOPMENT_SETUP.md
.claude/prompts/: git-branch.md  git-commit.md  git-pr.md  git-push.md  git-status.md  git-summary.md
extensions/: CMakeLists.txt
extensions/ext_admm_pd/: CMakeLists.txt  admm_dynamics.cpp  admm_dynamics.h  admm_extension.cpp  admm_extension.h  admm_system_config.h  admm_system_simulator.cpp  admm_system_simulator.h
extensions/ext_avbd/: CMakeLists.txt  avbd_area_term.cpp  avbd_area_term.h  avbd_extension.cpp  avbd_extension.h  avbd_spring_term.cpp  avbd_spring_term.h  avbd_system_config.h  avbd_system_simulator.cpp  avbd_system_simulator.h  avbd_term.h  graph_coloring.cpp  graph_coloring.h  vbd_dynamics.cpp  vbd_dynamics.h
extensions/ext_chebyshev_pd/: CMakeLists.txt  pd_dynamics.cpp  pd_dynamics.h  pd_extension.cpp  pd_extension.h  pd_system_config.h  pd_system_simulator.cpp  pd_system_simulator.h
extensions/ext_cloth/: CMakeLists.txt  cloth_components.h  cloth_extension.cpp  cloth_extension.h  cloth_mesh.cpp  cloth_mesh.h  cloth_renderer.cpp  cloth_renderer.h  cloth_simulator.cpp  cloth_simulator.h  cloth_types.h
extensions/ext_dynamics/: CMakeLists.txt  area_constraint.h  area_term.cpp  area_term.h  area_term_provider.cpp  area_term_provider.h  area_types.h  constraint_builder.cpp  constraint_builder.h  dynamics_extension.cpp  dynamics_extension.h  global_physics_params.h  gravity_term.cpp  gravity_term.h  inertial_term.cpp  inertial_term.h  spring_constraint.h  spring_term.cpp  spring_term.h  spring_term_provider.cpp  spring_term_provider.h  spring_types.h
extensions/ext_jgs2/: CMakeLists.txt  jgs2_dynamics.cpp  jgs2_dynamics.h  jgs2_extension.cpp  jgs2_extension.h  jgs2_precompute.cpp  jgs2_precompute.h  jgs2_spring_term.cpp  jgs2_spring_term.h  jgs2_system_config.h  jgs2_system_simulator.cpp  jgs2_system_simulator.h
extensions/ext_mesh/: CMakeLists.txt  mesh_component.h  mesh_extension.cpp  mesh_extension.h  mesh_generator.cpp  mesh_generator.h  mesh_post_processor.cpp  mesh_post_processor.h  mesh_renderer.cpp  mesh_renderer.h  mesh_types.h  normal_computer.cpp  normal_computer.h
extensions/ext_newton/: CMakeLists.txt  area_term.cpp  area_term.h  area_term_provider.cpp  area_term_provider.h  gravity_constraint.h  gravity_term_provider.cpp  gravity_term_provider.h  newton_dynamics.cpp  newton_dynamics.h  newton_extension.cpp  newton_extension.h  newton_system_config.h  newton_system_simulator.cpp  newton_system_simulator.h  spring_term.cpp  spring_term.h  spring_term_provider.cpp  spring_term_provider.h
extensions/ext_pd/: CMakeLists.txt  pd_area_term.cpp  pd_area_term.h  pd_area_term_provider.cpp  pd_area_term_provider.h  pd_dynamics.cpp  pd_dynamics.h  pd_extension.cpp  pd_extension.h  pd_spring_term.cpp  pd_spring_term.h  pd_spring_term_provider.cpp  pd_spring_term_provider.h  pd_system_config.h  pd_system_simulator.cpp  pd_system_simulator.h
extensions/ext_pd_term/: CMakeLists.txt  pd_area_term.cpp  pd_area_term.h  pd_area_term_provider.cpp  pd_area_term_provider.h  pd_spring_term.cpp  pd_spring_term.h  pd_spring_term_provider.cpp  pd_spring_term_provider.h  pd_term_extension.cpp  pd_term_extension.h
extensions/ext_sample/: CMakeLists.txt  sample_components.h  sample_extension.cpp  sample_extension.h  sample_renderer.cpp  sample_renderer.h  sample_simulator.cpp  sample_simulator.h
src/: CMakeLists.txt  main.cpp
src/core_database/: CMakeLists.txt  array_storage.h  array_transaction.h  component_storage.h  component_type.h  database.cpp  database.h  entity.cpp  entity.h  transaction.cpp  transaction.h
src/core_gpu/: CMakeLists.txt  asset_path.cpp  asset_path.h  bind_group_builder.cpp  bind_group_builder.h  bind_group_layout_builder.cpp  bind_group_layout_builder.h  compute_encoder.cpp  compute_encoder.h  compute_pipeline_builder.cpp  compute_pipeline_builder.h  gpu_buffer.cpp  gpu_buffer.h  gpu_core.cpp  gpu_core.h  gpu_handle.cpp  gpu_handle.h  gpu_sampler.cpp  gpu_sampler.h  gpu_shader.cpp  gpu_shader.h  gpu_texture.cpp  gpu_texture.h  gpu_types.h  pipeline_layout_builder.cpp  pipeline_layout_builder.h  shader_loader.cpp  shader_loader.h  surface_manager.cpp  surface_manager.h
src/core_platform/: CMakeLists.txt  input.cpp  input.h  window.cpp  window.h  window_native.cpp  window_native.h  window_wasm.cpp  window_wasm.h
src/core_render/: CMakeLists.txt  object_renderer.h  render_engine.cpp  render_engine.h  render_types.h
src/core_render/camera/: camera.cpp  camera.h  camera_controller.cpp  camera_controller.h
src/core_render/geometry/: draw_command.cpp  draw_command.h
src/core_render/pass/: render_encoder.cpp  render_encoder.h  render_pass_builder.cpp  render_pass_builder.h
src/core_render/pipeline/: render_pipeline_builder.cpp  render_pipeline_builder.h
src/core_render/post/: fullscreen_quad.cpp  fullscreen_quad.h  fxaa_pass.cpp  fxaa_pass.h  wboit_pass.cpp  wboit_pass.h
src/core_render/uniform/: camera_uniform.cpp  camera_uniform.h  light_uniform.cpp  light_uniform.h
src/core_simulate/: CMakeLists.txt  cg_solver.cpp  cg_solver.h  device_array_buffer.h  device_buffer_entry.h  device_db.cpp  device_db.h  dynamics_term.cpp  dynamics_term.h  dynamics_term_provider.h  projective_term.h  projective_term_provider.h  sim_components.h  simulate_config.h  simulator.h  solver_params.h
src/core_system/: CMakeLists.txt  extension.h  system.cpp  system.h
src/core_util/: CMakeLists.txt  logger.cpp  logger.h  math.h  timer.cpp  timer.h  types.h
(+123 files in other folders)
